# book-keeping

./: Cargo.toml  README.md
src/: main.rs
static/: index.css
templates/: base.html.tera  footer.hbs  index.hbs  index.html.tera  layout.hbs  nav.hbs
templates/error/: 404.hbs
