[package]
name = "book-keeping"
version = "0.1.0"
authors = ["Niharika <niharika.3297@gmail.com>", "Nik <nik@kalyani.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "tera_templates"]